--- a/rbac.yaml
+++ b/rbac.yaml
@@ -7,3 +7,17 @@ rules:
 - apiGroups: [""]
   resources: ["pods"]
   verbs: ["list", "get", "watch"]
+---
+kind: RoleBinding
+apiVersion: rbac.authorization.k8s.io/v1
+metadata:
+  name: expense-trainee
+  namespace: expense
+roleRef:
+  kind: Role
+  apiVersion: rbac.authorization.k8s.io
+  name: expense-trainee
+subjects:
+- kind: User
+  apiVersion: rbac.authorization.k8s.io
+  name: suresh
