--- a/rbac.yaml
+++ b/rbac.yaml
@@ -15,7 +15,7 @@ metadata:
   namespace: expense
 roleRef:
   kind: Role
-  apiVersion: rbac.authorization.k8s.io
+  apiGroup: rbac.authorization.k8s.io
   name: expense-trainee
 subjects:
 - kind: User
