--- a/rbac-ramesh.yaml
+++ b/rbac-ramesh.yaml
@@ -7,3 +7,17 @@ rules:
 - apiGroups: ["*"]
   resources: ["*"]
   verbs: ["*"]
+---
+kind: RoleBinding
+apiVersion: rbac.authorization.k8s.io/v1
+metadata:
+  name: expense-admin
+  namespace: expense
+roleRef:
+  kind: Role
+  apiGroup: rbac.authorization.k8s.io
+  name: expense-admin
+subjects:
+  kind: User
+  apiGroup: rbac.authorization.k8s.io
+  name: ramesh
