--- a/rbac-ramesh.yaml
+++ b/rbac-ramesh.yaml
@@ -18,6 +18,6 @@ roleRef:
   apiGroup: rbac.authorization.k8s.io
   name: expense-admin
 subjects:
-  kind: User
+- kind: User
   apiGroup: rbac.authorization.k8s.io
   name: ramesh
