Created ramesh user

--- a/aws-auth.yaml
+++ b/aws-auth.yaml
@@ -18,3 +18,7 @@ data:
       - expense-trainee
       userarn: arn:aws:iam::339712874850:user/suresh
       username: suresh
+    - groups:
+      - expense-admin
+      userarn: arn:aws:iam::339712874850:user/ramesh
+      username: ramesh
