--- a/rbac-manager.yaml
+++ b/rbac-manager.yaml
@@ -6,3 +6,16 @@ rules:
 - apiGroups: [""]
   resources: ["node", "persistantvolume", "namespace"]
   verbs: ["list", "get", "watch"]
+---
+kind: ClusterRoleBinding
+apiVersion: rbac.authorization.k8s.io/v1
+metadata:
+  name: expense-manager
+roleRef:
+  kind: ClusterRole
+  apiGroup: rbac.authorization.k8s.io
+  name: expense-manager
+subjects:
+- kind: User
+  apiGroup: rbac.authorization.k8s.io
+  name: ramesh
